--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <title>Shortly</title>
-    <link rel="stylesheet" type="text/css" href="style-min.css">    
+    <link rel="stylesheet" type="text/css" href="style.css">    
     <script src="/lib/build-min.js"></script>
+
 
   </head>
 
