--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>Shortly</title>
-    <link rel="stylesheet" type="text/css" href="style.css">    
-    <script src="/lib/build-min.js"></script>
+    <link rel="stylesheet" type="text/css" href="dist/style-min.css">    
+    <script src="/dist/build-min.js"></script>
 
 
   </head>
